# imposter5

./: .gitignore  README.md  requirements.txt
backend/: README.md  app.py  pyproject.toml
backend/fp_agent/: fp_agent_local_redteam_detector_test.py  get_fp_agent_real_verdict.py
backend/fp_agent/classifier_training/ablation_configs/: example.yaml
backend/fp_agent/classifier_training/classifiers/: browser_fingerprint_browsing_agents_only.json  combined_fingerprint_all_classes.json
backend/fp_agent/classifier_training/features/: colorGamut.txt  fontPreferences.txt  fonts.txt  osCpu.txt  (+4 more)
backend/loaders/: cloak_runtime.py  linkedin_feed_scraper.py
backend/server/: errors.py
backend/server/automation_connector/: behavior_policy.py  browser_runner.py  goal_runner.py  goals.py  interaction_primitives.py  models.py
backend/src/imposter5/: __init__.py
backend/static/: playback.html
backend/tests/: conftest.py  test_arrival_clock.py  test_auth_gate.py  test_automation_connector_behavior_policy.py  test_automation_connector_browser_runner.py  test_automation_connector_goal_runner.py  test_automation_connector_interaction_primitives.py  test_automation_connector_session_recorder.py  test_feasibility.py  test_feed_scroll_regression.py  test_linkedin_bridge.py  test_linkedin_feed_hybrid.py  test_prompt_to_story.py  test_redteam_motor_purpose.py  test_scheduler.py  test_session_duration.py  test_session_recorder_incremental_flush.py  test_story_compiler.py  test_story_executor_e2e.py  test_story_goal.py  test_story_site_mapper.py  test_story_task_intent.py
(+84 files in other folders)
