[project]
name = "classifier_training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ijson>=3.4.0.post0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "orjson>=3.11.4",
    "pandas>=3.0.2",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pyyaml>=6.0.3",
    "scienceplots>=2.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap==0.50.0",
    "statsmodels>=0.14.6",
    "umap-learn>=0.5.11",
    "xgboost>=3.1.1",
]
